# Valot

./: .gitignore  .weblate  CHANGELOG.md  CONTRIBUTING.md  COPYING  README.md  com.odnoyko.valot.Devel.json  com.odnoyko.valot.json  com.odnoyko.valot.yml  meson.build  meson_options.txt  package.json  valot.desktop
src/: com.odnoyko.valot.data.gresource.xml  com.odnoyko.valot.in  com.odnoyko.valot.src.gresource.xml  config.js.in  main.js  meson.build  meson.build.flatpak
src/core/: index.js  index.ts  tsconfig.json
src/core/api/: CoreAPI.js  CoreAPI.ts
src/core/database/: DatabaseAdapter.ts  GdaAdapter.js  GdaAdapter.ts
src/core/events/: CoreEvents.js  CoreEvents.ts  EventBus.js  EventBus.ts
src/core/models/: Client.ts  Project.ts  Task.ts  TaskInstance.ts  TimeEntry.ts
src/core/services/: BaseService.js  BaseService.ts  CacheService.js  ClientService.js  ClientService.ts  GlobalTimer.js  MemoryCleanupService.js  ProjectService.js  ProjectService.ts  ReportService.js  ReportService.ts  StatsService.js  TaskInstanceService.js  TaskInstanceService.ts  TaskService.js  TaskService.ts  TimeTrackingService.js  TimeTrackingService.ts  TimerScheduler.js  TrackingFileCache.js  TrackingPersistenceService.js
src/core/state/: StateManager.js  StateManager.ts
src/core/utils/: ColorUtils.js  ColorUtils.ts  DateFilters.js  DateFilters.ts  Debouncer.js  Logger.js  TimeUtils.js  TimeUtils.ts  ValidationUtils.js  ValidationUtils.ts
src/data/: DataNavigator.js  DataProvider.js  emojis.js  icons.js
src/data/gdaDBBridge/: DatabaseMigration.js  GdaDatabaseBridge.js
src/data/providers/: LocalDBProvider.js  README.md
src/data/providers/gdaDBBridge/: DatabaseImport.js  DatabaseMigration.js  GdaDatabaseBridge.js
src/extensions/: ExtensionManager.js  README.md
src/extensions/Example/: COPYING_INSTRUCTIONS.md  Example.js  README.md  manifest.json
src/extensions/builtin/: QuickTaskAddon.js
src/js/: compactTracker.js  compacttracker.js  dbinitialisation.js  main.js  mainwindow.js  test.js  window.js  window.js.backup
src/js/charts/: simpleChart.js
src/js/clients/: clientManager.js
src/js/data/: currencies.js  pomodoro-config.json
src/js/func/components/complex/: ProjectCardBehavior.js
src/js/func/components/primitive/: ButtonBehavior.js  EntryBehavior.js
src/js/func/global/: aboutDialog.js  addtask.js  colorUtils.js  commonStrings.js  config.js.in  dateFilters.js  dbinitialisation.js  eventManager.js  globalTracking.js  inputValidation.js  keyboardHandler.js  pomodoroManager.js  sidebar.js  timeUtils.js  timetracking.js  trackingStateManager.js
src/js/func/pages/: ProjectsPageBehavior.js  clientManager.js  cssCharts.js  dialogManager.js  drawingCharts.js  legacyCharts.js  pdfExporter.js  projectManager.js  reportExporter.js  reportHTML.js  reportPDF.js  searchManager.js  simpleChart.js  taskManager.js  taskRenderer.js  templateEngine.js  templatePDFGenerator.js  textCharts.js  themeLoader.js  webCharts.js  windowManagers.js
src/js/func/pages/templates/: professional-report.html
src/js/global/: aboutDialog.js  addtask.js  contributionWindow.js  inputValidation.js  sidebar.js  timetracking.js  trackingStateManager.js
src/js/interface/components/: CarouselDialog.js  PreferencesDialog.js  clientDropdown.js  selectorFactory.js  widgetFactory.js
src/js/interface/dialogs/: PDFExportPreferencesDialog.js
src/js/interface/pages/: BasePage.js  ClientsPage.js  ProjectsPage.js  ProjectsPageInterface.js  ReportsPage.js  TasksPage.js
src/js/projects/: projectManager.js
src/js/reports/: htmlPdfExporter.js  htmlTemplatePdfExporter.js  pdfExporter.js  pdfPreviewWindow.js  reportExporter.js  reportHTML.js  reportPDF.js  templateEngine.js  templatePDFGenerator.js
src/js/reports/templates/: annual-report.html  professional-report.html
src/js/reports/themes/: annual-report.json  corporate-dark.json  minimal-clean.json  modern-blue.json  your-custom-theme.json
src/js/tasks/: taskRenderer.js
src/js/utils/: timeUtils.js
src/style/: main.css
src/ui/: compact-tracker.blp  compact-tracker.ui  window.blp  window.ui
src/ui/bridges/: CoreBridge.js  GdaDatabaseBridge.js
src/ui/components/complex/: AdvancedTrackingWidget.js  ClientDialog.js  CurrencyDialog.js  DateRangeSelector.js  FormDialog.js  HeaderTrackingWidget.js  ModularDialogManager.js  ProjectAppearanceDialog.js  ProjectCard.js  ProjectDialog.js  TaskRowTemplate.js  TaskStackTemplate.js  TaskTemplate.js  TaskTemplateDialog.js  TrackingWidget.js
src/ui/components/dialogs/: CarouselDialog.js  DatabaseMigrationDialog.js  MultipleTasksEditDialog.js  PDFExportPreferencesDialog.js  PreferencesDialog.js  QuickTaskSelector.js  TaskInstanceEditDialog.js
src/ui/components/primitive/: Button.js  Entry.js  IconPicker.js
src/ui/services/: DialogPool.js  ListRenderService.js
src/ui/styles/: main.css
src/ui/utils/: CoreImports.js  DurationAnimator.js  GestureController.js  StringCache.js  clientDropdown.js  commonStrings.js  projectDropdown.js  selectorFactory.js  svgRecolor.js  timeUtils.js  widgetFactory.js
src/ui/utils/export/: pdfExporter.js  reportExporter.js  reportHTML.js  reportPDF.js  templateEngine.js  templatePDFGenerator.js
src/ui/windows/: Application.js  CompactTracker.js  CompactTrackerWindow.js  MainWindow.js
src/ui/windows/pages/: BasePage.js  ClientsPage.js  ProjectsPage.js  ProjectsPageInterface.js  ReportsPage.js  ReportsPage.js.backup  TasksPage.js
src/utils/: InputValidator.js
(+109 files in other folders)
